examples/test/testpolicy16378.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16378
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key48: value47
      key12: value16
      key16: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value14
          key24: value25
          key35: value17
